BE 로그인 로직 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=Dfocus_project
 server.port=8080
 
-# ??????(MSSQL) ??
-# ================================
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# =======================MSSQL ================================
+spring.datasource.url=jdbc:sqlserver://211.232.94.161:1533;databaseName=SKUEDU;encrypt=true;trustServerCertificate=true
+
+spring.datasource.username=SKUEDU01
+spring.datasource.password=init000!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# =======================MSSQL ================================
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.skuniv.dfocus_project.domain.account
